* Fix alignment of all filter buttons for xs grid in list views

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -36,17 +36,17 @@ table {
   }
 }
 
+.table-data-wrap {
+  white-space: nowrap;
+  width: 1%;
+}
+
 .navbar-brand {
   padding: 0px 15px;
 }
 
 #nav-logo {
   margin-top: 10px;
-}
-
-.table-data-wrap {
-  white-space: nowrap;
-  width: 1%;
 }
 
 .insertion-form {
@@ -117,5 +117,10 @@ table {
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .table-responsive {
     margin-top: $margin-default;
+  }
+  
+  .filter-button {
+    float: right;
+    margin-top: 10px;
   }
 }
